fix: fix configurable gui issues