@@ -21,7 +21,6 @@ import org.bukkit.event.inventory.InventoryOpenEvent;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.SkullMeta;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class DuelMatchCreatorNonOwnerGUI extends ConfigurableGui {
@@ -34,34 +33,35 @@ public class DuelMatchCreatorNonOwnerGUI extends ConfigurableGui {
 		this.matchCreator = matchCreator;
 		setTitle(MessageUtils.parseColor(MessageUtils.applyPlaceholders(ConfigurationHandler.getMenus().getString(getSectionPath() + ".title"),
 				new PlaceholderUtil()
-						.add("{owner}", Utils.getDisplayName(Bukkit.getPlayer(matchCreator.getOwnerPlayer())))
-						.add("{mode}", MessageUtils.convertMode(matchCreator.getBuilder().getTeamSize(), matchCreator.getBuilder().getTeamAmount())))));
-		setSize((matchCreator.getBuilder().getTeamAmount() + 1) * 9);
+						.add("{owner}", Utils.getDisplayName(Bukkit.getPlayer(this.matchCreator.getOwnerPlayer())))
+						.add("{mode}", MessageUtils.convertMode(this.matchCreator.getBuilder().getTeamSize(), this.matchCreator.getBuilder().getTeamAmount())))));
+		setSize((this.matchCreator.getBuilder().getTeamAmount() + 1) * 9);
 	}
 
 	@Override
 	public void onOpen(InventoryOpenEvent event) {
 		putDysfunctionalIcons(new PlaceholderUtil()
-						.add("{mode}", MessageUtils.convertMode(matchCreator.getBuilder().getTeamSize(), matchCreator.getBuilder().getTeamAmount()))
-						.add("{invited-players}", matchCreator.getInvites().size() + "")
-						.add("{total-players}", matchCreator.getBuilder().getPlayers().size() + "")
-						.add("{round-amount}", matchCreator.getBuilder().getTotalRounds() + "")
-						.add("{game-timer}", TimerUtils.formatTimeAsTimer(matchCreator.getBuilder().getDuration().toSeconds()))
-						.add("{game-time}", TimerUtils.formatTimeAsTime(matchCreator.getBuilder().getDuration().toSeconds()))
-						.add("{team-amount}", matchCreator.getBuilder().getTeamAmount() + "")
-						.add("{team-size}", matchCreator.getBuilder().getTeamSize() + "")
-				, Arrays.asList("kit-icon"));
+						.add("{mode}", MessageUtils.convertMode(this.matchCreator.getBuilder().getTeamSize(), this.matchCreator.getBuilder().getTeamAmount()))
+						.add("{invited-players}", this.matchCreator.getInvites().size() + "")
+						.add("{total-players}", this.matchCreator.getBuilder().getPlayers().size() + "")
+						.add("{round-amount}", this.matchCreator.getBuilder().getTotalRounds() + "")
+						.add("{game-timer}", TimerUtils.formatTimeAsTimer(this.matchCreator.getBuilder().getDuration().toSeconds()))
+						.add("{game-time}", TimerUtils.formatTimeAsTime(this.matchCreator.getBuilder().getDuration().toSeconds()))
+						.add("{team-amount}", this.matchCreator.getBuilder().getTeamAmount() + "")
+						.add("{team-size}", this.matchCreator.getBuilder().getTeamSize() + "")
+				, List.of("kit-icon"));
 		putTeamIcons();
 
 		putIcon("leave", e -> {
 			player.performCommand("duel leave");
+			player.closeInventory();
 		});
 
-		if (matchCreator.getCreatorKitManager().getKitMode().equals(CreatorKitManager.KitMode.VARIOUS)) {
-			Member.Builder builder = matchCreator.getBuilder().getData().getGameTeamManager().getMemberBuilder(player.getUniqueId());
+		if (this.matchCreator.getCreatorKitManager().getKitMode().equals(CreatorKitManager.KitMode.VARIOUS)) {
+			Member.Builder builder = this.matchCreator.getBuilder().getData().getGameTeamManager().getMemberBuilder(player.getUniqueId());
 			putIcon("kit-icon", new PlaceholderUtil().add("{kit}", builder.getKit() == null ? MessageUtils.parseColor(MessageUtils.getMessage("kit.none-kit-name")) : builder.getKit().getKitName()), e -> {
-				new KitSelectionGUI(player, matchCreator.getBuilder(), kit -> {
-					matchCreator.getBuilder().getData().getGameTeamManager().getMemberBuilder(player.getUniqueId()).setKit(kit);
+				new KitSelectionGUI(player, this.matchCreator.getBuilder(), kit -> {
+					this.matchCreator.getBuilder().getData().getGameTeamManager().getMemberBuilder(player.getUniqueId()).setKit(kit);
 					open();
 				}).open();
 			});
@@ -69,12 +69,12 @@ public class DuelMatchCreatorNonOwnerGUI extends ConfigurableGui {
 	}
 
 	private void putTeamIcons() {
-		final MatchBuilder matchBuilder = matchCreator.getBuilder();
+		final MatchBuilder matchBuilder = this.matchCreator.getBuilder();
 		final MatchTeamManager matchTeamManager = matchBuilder.getData().getGameTeamManager();
 
 		for (int teamNo = 0; teamNo < matchBuilder.getTeamAmount(); teamNo++) {
 
-			final Icon icon = new Icon(guiConfig.teamIcons.get(Math.min(teamNo, guiConfig.teamIcons.size() - 1)).clone()).setName(guiConfig.teamIconName).setLore(guiConfig.teamIconLore);
+			final Icon icon = new Icon(DuelMatchCreatorNonOwnerGUI.guiConfig.teamIcons.get(Math.min(teamNo, DuelMatchCreatorNonOwnerGUI.guiConfig.teamIcons.size() - 1)).clone()).setName(DuelMatchCreatorNonOwnerGUI.guiConfig.teamIconName).setLore(DuelMatchCreatorNonOwnerGUI.guiConfig.teamIconLore);
 			final ItemStack item = icon.getItem();
 			ItemStackSerializer.applyPlaceholdersToItemStack(item, new PlaceholderUtil().add("{team-no}", (teamNo + 1) + "").add("{team-players-amount}", matchTeamManager.getTeamBuilders().get(teamNo).getMemberBuilders().size() + "").add("{team-size}", matchBuilder.getTeamAmount() + ""));
 
@@ -85,7 +85,7 @@ public class DuelMatchCreatorNonOwnerGUI extends ConfigurableGui {
 
 				final Team.Builder team = matchTeamManager.getTeamBuilders().get(teamNo);
 				if (team.getMemberBuilders().size() <= member) {
-					addItem(slot, getNullMemberSlotIcon(team));
+					addItem(slot, getNullMemberSlotIcon());
 					continue;
 				}
 
@@ -99,7 +99,7 @@ public class DuelMatchCreatorNonOwnerGUI extends ConfigurableGui {
 					return;
 				}
 
-				final ItemStack playerHead = guiConfig.getPlayerSlotIcon(builder);
+				final ItemStack playerHead = DuelMatchCreatorNonOwnerGUI.guiConfig.getPlayerSlotIcon(builder);
 
 				final Icon playerHeadIcon = new Icon(playerHead);
 				addItem(slot, playerHeadIcon);
@@ -107,8 +107,8 @@ public class DuelMatchCreatorNonOwnerGUI extends ConfigurableGui {
 		}
 	}
 
-	private Icon getNullMemberSlotIcon(Team.Builder team) {
-		return new Icon(guiConfig.getEmptyIcon());
+	private Icon getNullMemberSlotIcon() {
+		return new Icon(DuelMatchCreatorNonOwnerGUI.guiConfig.getEmptyIcon());
 
 	}
 
